src/ducks/transactions/Transactions.styl
@require '~components/Table/styles' // table need to be required before since we override some styles
@require '~styles/mixins.styl'
@require 'settings/breakpoints'

.bnk-op-table
    @extend $full-width-table
    color charcoalGrey

    .bnk-op-date
        maxed-flex-basis 15%
        color coolGrey
        text-align right

    .bnk-op-desc
        maxed-flex-basis 30%

    .bnk-op-amount
        maxed-flex-basis 20%
        text-align right
    .bnk-op-action
        maxed-flex-basis 25%

    .bnk-op-actions
        maxed-flex-basis 10%

    .bnk-transaction-mobile
        & > td
            width 100%
        &:last-child
            border-bottom 0

    .bnk-op-caticon
        cursor pointer

    .bnk-op-label
        max-width 100%

    +medium-screen()
        .bnk-op-desc
            cursor pointer
            maxed-flex-basis 60%
        .bnk-op-amount
            cursor pointer
            maxed-flex-basis 40%
        .bnk-op-actions
            width 150px
        .bnk-op-date
        .bnk-op-action
            display none

        tbody:last-child
            tr:last-child
                border-bottom-width 1px

        .bnk-op-date-header
            display inherit
            background-color paleGrey
            border-width 0

            td
                background-color paleGrey
                color coolGrey
                font-size 0.75rem
                text-transform uppercase
                font-weight bold
                padding 0.125rem 1rem
                line-height 1rem

    tbody
        overflow inherit!important

        .bnk-op-actions
            padding 0 2rem 0 0

            > div
                float right

// For now, all mouvements from same category use the same icon
categories = kids dailyLife educationAndTraining health homeAndRealEstate incomeCat activities excludeFromBudgetCat services tax transportation goingOutAndTravel uncategorized

// TODO use function to get each movement icon instead of category icon
getTemporaryCatBkg(categoryLabel)


for category in categories
    .bnk-table-desc--{category}
        icon = '../../assets/icons/categories/icon-cat-%s.svg' % category
        background-image embedurl(icon) // @stylint ignore

+medium-screen()
    .c-table-body .c-table-row
        font-size 0.8em
    .c-table-cell.bnk-table-desc
        padding-left    4em

